Changes in Swagger file and authMiddleware
