# src/controllers/ToolsController.js
@@ -10,13 +10,14 @@ module.exports = {
             const { tag } = req.query
             tools = await Tools.find({ tags: tag })
         } else {
-            tools = await Tools.find().sort('-createdAt')
-            //tools.map(t => console.log(t.title))            
+            tools = await Tools.find().sort('-createdAt')     
         }
 
-        if (!tools) return res.status(404).json({ error: "Dados nao encontrados" })
+        if (!tools) return res.status(404).json({ error: "Tools not found." })
+        //return res.json(tools)
 
-        return res.json(tools)
+        const toolsSort = JSON.parse(JSON.stringify(tools, ["_id","title","link","description","tags","createdAt","updatedAt"]))
+        return res.json(toolsSort)
 
 
     },
@@ -25,10 +26,10 @@ module.exports = {
         const { id } = req.params
 
         if(!mongoose.Types.ObjectId.isValid(id)){
-            return res.status(404).json({ error: "ID invalido" })
+            return res.status(404).json({ error: "Invalid ID." })
         }
 
-        if (!id) return res.status(400).json({ error: "ID nao informado" })
+        if (!id) return res.status(400).json({ error: "ID is required." })
 
         const tool = await Tools.findById(id)
         return res.json(tool)
@@ -38,10 +39,10 @@ module.exports = {
         const { id } = req.params
 
         if(!mongoose.Types.ObjectId.isValid(id)){
-            return res.status(404).json({ error: "ID invalido" })
+            return res.status(404).json({ error: "Invalid ID." })
         }
 
-        if (!id) return res.status(400).json({ error: "ID nao informado" })
+        if (!id) return res.status(400).json({ error: "ID is required." })
 
         const tool = await Tools.findByIdAndUpdate(id, req.body, {
             new: true
@@ -53,7 +54,7 @@ module.exports = {
         //console.log(req.body)
 
         const { title, link, description, tags } = req.body
-        if (!title || !link) return res.status(400).json({ error: "Campos obrigatorios nao foram informados." })
+        if (!title || !link) return res.status(400).json({ error: "Invalid Tool." })
 
         try {
             const tool = await Tools.create({
@@ -61,7 +62,7 @@ module.exports = {
             })
             return res.status(201).json(tool)
         } catch (err) {
-            return res.status(400).send({ error: "Erro ao cadastrar uma nova ferramenta" })
+            return res.status(400).send({ error: "Error when create a new tool." })
         }
 
     },
@@ -70,10 +71,10 @@ module.exports = {
         const { id } = req.params
 
         if(!mongoose.Types.ObjectId.isValid(id)){
-            return res.status(404).json({ error: "ID invalido" })
+            return res.status(404).json({ error: "Invalid ID." })
         }
-        
-        if (!id) return res.status(400).json({ error: "ID nao informado" })
+
+        if (!id) return res.status(400).json({ error: "ID is required." })
 
         await Tools.findByIdAndRemove(id)
 
